# actix_crud_api

./: .env  Cargo.toml  README.md
docker/: docker-compose.yml
migrations/: mod.rs
migrations/0001_create_users_table/: up.sql
src/: error.rs  errors.rs  main.rs
src/api/: task.rs
src/handlers/: mod.rs  ping_pong_handler.rs  user_handler.rs
src/migrations/: mod.rs
src/models/: mod.rs  ping_pong_models.rs  user_models.rs
src/repositories/: user_repository.rs
src/web/: routes_login.rs
