[package]
name = "axum_crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11"

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1.10"