[package]
name = "actix_crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
uuid = {version = "1.17.0", features = ["v4"]}
serde = {version = "1", features = ["derive"]}

env_logger = "0.11.8"
log = "0.4"

strum_macros = "0.27.2"
strum = {version = "0.27.2", features = ["derive"]}
derive_more = "2.0.1"

tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"  
dotenv = "0.15"
refinery = { version = "0.8", features = ["tokio-postgres"] }