[package]
name = "actix_crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
uuid = {version = "1.17.0", features = ["v4"]}
serde = {version = "1", features = ["derive"]}

env_logger = "0.11.8"
log = "0.4"

strum_macros = "0.27.2"
strum = {version = "0.27.2", features = ["derive"]}
derive_more = "2.0.1"
dotenv = "0.15"

sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }

anyhow = "1.0"
